# local-video-analysis

./: .gitignore  DECISIONS.md  PRD-REFINEMENT.md  README.md  config.yaml  pyproject.toml
tests/: __init__.py  test_analyzer.py  test_chunker.py  test_semantic_events.py
video_analysis/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
video_analysis/export/: __init__.py  json_export.py  markdown_export.py  srt_export.py
video_analysis/mcp/: __init__.py  tools.py
video_analysis/models/: __init__.py  analysis.py  chapter.py  chunk.py  key_moment.py  video.py
video_analysis/pass1/: __init__.py  analyzer.py  chunker.py  prompts.py
video_analysis/pass2/: __init__.py  prompts.py  synthesizer.py
video_analysis/reasoning/: __init__.py  llama_cpp.py  ollama.py  server.py
video_analysis/stage0/: __init__.py  align.py  audio.py  audio_events.py  diarize.py  frames.py  metadata.py  scenes.py  semantic_events.py  separate.py  vision.py
video_analysis/storage/: __init__.py  database.py  schema.py  search.py
video_analysis/ui/: __init__.py  app.py
